exercise completed + bonus + extra (query 477px with different player, gradient background, scrollbar style, hover on volume + fix scrollbar main-body, added time animation) + minor fix

--- a/css/style.css
+++ b/css/style.css
@@ -200,8 +200,8 @@ button.row:hover .create-playlist{
 }
 
 .new-playlist{
-    height: 20vh;
-    
+    height: 35vh;
+
     margin-bottom: 25px;
 
     overflow-y: auto;
